Add integration tests
Use 201 instead of 200 for resource creation
