# routes/menuItem.js
@@ -6,7 +6,7 @@ const { MenuItem, MenuItemInvalidError } = require('../menuItem')
 // add a menu item
 router.post('/', function(req, res) {
   let menu = MenuItem.create(req.body)
-  res.status(200).json(menu)
+  res.status(201).json(menu)
 })
 
 router.route('/:id')
